# rest-api-shared

./: .gitignore  Cargo.toml
src/: lang_id.rs  lib.rs
src/authorisation/: get_client_id.rs  mod.rs
src/contracts/: api_failed.rs  auth_failed.rs  mod.rs  operation_blocked.rs  result_status.rs  session_nosql.rs
src/http_context/: get_brand_id.rs  get_client_id.rs  get_country.rs  get_ip.rs  get_lang.rs  get_user_agent.rs  kyc_confirmed.rs  mod.rs
src/middlewares/: auth_middleware.rs  mod.rs
src/request_extentions/: mod.rs  request_ext.rs
src/session_token/: access_claim.rs  date_time.rs  mod.rs  session_token.rs  token_key.rs
src/shared_contracts/: auth_failed.rs  mod.rs  result_status.rs  session_nosql.rs
src/token/: access_claim.rs  access_token.rs  aes_cipher.rs  cipher.rs  mod.rs  refresh_token.rs  token_key.rs
