[package]
name = "rest-api-shared"
version = "0.4.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-swagger = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
my-http-server-controllers = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-no-sql-server-abstractions = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }
my-no-sql-tcp-reader = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-no-sql-tcp-reader" }

rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
prost-types = "*"
enc_file = "*"
base64 = "*"
serde_repr = "*"
serde_json = "*"
aes = "*"
libaes = "*"
sha2 = "*"
isolang = "*"
uuid = { version = "*", features = ["v4"] }
chrono = "*"