[package]
name = "rest-api-shared"
version = "1.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-nosql-sdk",
    "macros",
    "my-nosql-data-reader-sdk",
] }
async-trait = "*"
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
prost-types = "*"
enc_file = "*"
base64 = "0.21.0"
serde_repr = "*"
serde_json = "*"
aes = "*"
libaes = "*"
sha2 = "*"
isolang = "*"
uuid = { version = "*", features = ["v4"] }
chrono = "*"
rust_iso3166 = "*"